--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
                     <goals>install</goals>
+                    <autoVersionSubModules>true</autoVersionSubModules>
                 </configuration>
             </plugin>
         </plugins>
