--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -44,6 +44,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.github.jshota</groupId>
+            <artifactId>pet-clinic-data</artifactId>
+            <version>0.0.3-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
